--- a/cubemx/cubemx.ioc
+++ b/cubemx/cubemx.ioc
@@ -3,14 +3,16 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM2
-Mcu.IP4=TIM3
-Mcu.IP5=TIM4
-Mcu.IP6=USART1
-Mcu.IPNb=7
+Mcu.IP0=I2C1
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN
@@ -24,8 +26,12 @@ Mcu.Pin15=PD12
 Mcu.Pin16=PD13
 Mcu.Pin17=PA9
 Mcu.Pin18=PA10
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin19=PD5
 Mcu.Pin2=PF1
+Mcu.Pin20=PD6
+Mcu.Pin21=PB6
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_SYS_VS_Systick
 Mcu.Pin3=PF2
 Mcu.Pin4=PF3
 Mcu.Pin5=PF4
@@ -33,7 +39,7 @@ Mcu.Pin6=PF9
 Mcu.Pin7=PF10
 Mcu.Pin8=PH0-OSC_IN
 Mcu.Pin9=PH1-OSC_OUT
-Mcu.PinsNb=20
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -71,6 +77,10 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Signal=S_TIM3_CH2
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
+PB7.Mode=I2C
+PB7.Signal=I2C1_SDA
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -85,6 +95,10 @@ PD13.GPIOParameters=GPIO_Speed,GPIO_Label
 PD13.GPIO_Label=B2
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD13.Signal=S_TIM4_CH2
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
 PF1.GPIOParameters=GPIO_Label
 PF1.GPIO_Label=MOTOR1_IN1
 PF1.Locked=true
@@ -195,6 +209,8 @@ TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
+USART2.IPParameters=VirtualMode
+USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=custom
