--- a/cubemx/cubemx.ioc
+++ b/cubemx/cubemx.ioc
@@ -2,6 +2,7 @@
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
 Mcu.IP0=I2C1
 Mcu.IP1=NVIC
@@ -17,18 +18,18 @@ Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA1
-Mcu.Pin11=PA2
-Mcu.Pin12=PA3
-Mcu.Pin13=PA6
-Mcu.Pin14=PA7
-Mcu.Pin15=PD12
-Mcu.Pin16=PD13
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PD5
+Mcu.Pin10=PA2
+Mcu.Pin11=PA3
+Mcu.Pin12=PA6
+Mcu.Pin13=PA7
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PD12
+Mcu.Pin17=PD13
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PF1
-Mcu.Pin20=PD6
+Mcu.Pin20=PB3
 Mcu.Pin21=PB6
 Mcu.Pin22=PB7
 Mcu.Pin23=VP_SYS_VS_Systick
@@ -43,30 +44,25 @@ Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
-MxCube.Version=6.4.0
-MxDb.Version=DB.6.0.40
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+MxCube.Version=6.6.1
+MxDb.Version=DB.6.0.60
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA1.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PA1.GPIO_PuPd=GPIO_NOPULL
-PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA1.Signal=S_TIM2_CH2
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PA2.GPIO_PuPd=GPIO_NOPULL
-PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA2.Signal=S_TIM2_CH3
-PA3.Signal=S_TIM2_CH4
+PA2.Mode=Asynchronous
+PA2.Signal=USART2_TX
+PA3.Mode=Asynchronous
+PA3.Signal=USART2_RX
 PA6.GPIOParameters=GPIO_Speed,GPIO_Label
 PA6.GPIO_Label=A1
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
@@ -77,6 +73,18 @@ PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Signal=S_TIM3_CH2
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB10.GPIO_PuPd=GPIO_NOPULL
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB10.Signal=S_TIM2_CH3
+PB11.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB11.GPIO_PuPd=GPIO_PULLUP
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB11.Signal=S_TIM2_CH4
+PB3.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB3.GPIO_PuPd=GPIO_NOPULL
+PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB3.Signal=S_TIM2_CH2
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -95,12 +103,6 @@ PD13.GPIOParameters=GPIO_Speed,GPIO_Label
 PD13.GPIO_Label=B2
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD13.Signal=S_TIM4_CH2
-PD5.Mode=Asynchronous
-PD5.Signal=USART2_TX
-PD6.Mode=Asynchronous
-PD6.Signal=USART2_RX
-PF1.GPIOParameters=GPIO_Label
-PF1.GPIO_Label=MOTOR1_IN1
 PF1.Locked=true
 PF1.Signal=GPIO_Output
 PF10.GPIOParameters=GPIO_Label
@@ -137,12 +139,12 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407ZGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.26.2
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -155,7 +157,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
