--- a/cubemx/cubemx.ioc
+++ b/cubemx/cubemx.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+CAD.formats=
+CAD.pinconfig=
+CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -44,8 +47,8 @@ Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
-MxCube.Version=6.6.1
-MxDb.Version=DB.6.0.60
+MxCube.Version=6.7.0
+MxDb.Version=DB.6.0.70
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -64,21 +67,23 @@ PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
 PA6.GPIOParameters=GPIO_Speed,GPIO_Label
-PA6.GPIO_Label=A1
+PA6.GPIO_Label=A2
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_Speed,GPIO_Label
-PA7.GPIO_Label=B1
+PA7.GPIO_Label=B2
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Signal=S_TIM3_CH2
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PB10.GPIO_Label=ENB
 PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB10.Signal=S_TIM2_CH3
-PB11.GPIOParameters=GPIO_Speed,GPIO_PuPd
-PB11.GPIO_PuPd=GPIO_PULLUP
+PB11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PB11.GPIO_Label=ENA
+PB11.GPIO_PuPd=GPIO_NOPULL
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB11.Signal=S_TIM2_CH4
 PB3.GPIOParameters=GPIO_Speed,GPIO_PuPd
@@ -94,15 +99,17 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PD12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
-PD12.GPIO_Label=A2
+PD12.GPIO_Label=B1
 PD12.GPIO_PuPd=GPIO_NOPULL
 PD12.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD12.Locked=true
 PD12.Signal=S_TIM4_CH1
 PD13.GPIOParameters=GPIO_Speed,GPIO_Label
-PD13.GPIO_Label=B2
+PD13.GPIO_Label=A1
 PD13.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PD13.Signal=S_TIM4_CH2
+PF1.GPIOParameters=GPIO_Label
+PF1.GPIO_Label=MOTOR1_IN1
 PF1.Locked=true
 PF1.Signal=GPIO_Output
 PF10.GPIOParameters=GPIO_Label
@@ -139,12 +146,12 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407ZGTx
-ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.0
+ProjectManager.FirmwarePackage=STM32Cube FW_F4 V1.27.1
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=false
+ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Src
 ProjectManager.NoMain=false
@@ -157,7 +164,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=EWARM V8.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM3_Init-TIM3-false-HAL-true,5-MX_TIM4_Init-TIM4-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -211,7 +218,8 @@ TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USART2.IPParameters=VirtualMode
+USART2.BaudRate=115200
+USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
